--- a/src/main/resources/templates/notebook/home.html
+++ b/src/main/resources/templates/notebook/home.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/layout2::head">
@@ -32,63 +33,10 @@
                              <div>
 
                                  <!--左侧菜单header    -->
-                                 <aside class="my-side" th:fragment="teamBoardMenu">
-                                     <nav class="sidebar-nav">
-                                         <ul id="menu">
-                                             <div class="menu">
-                                             <li class="">
-                                                 <a data-href="/notebook/user/board" href="javascript:;" aria-expanded="false">
-                                                <span>
-                            <svg class="bi bi-house-door" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">-->
-                                <path fill-rule="evenodd" d="M7.646 1.146a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 .146.354v7a.5.5 0 0 1-.5.5H9.5a.5.5 0 0 1-.5-.5v-4H7v4a.5.5 0 0 1-.5.5H2a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .146-.354l6-6zM2.5 7.707V14H6v-4a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 .5.5v4h3.5V7.707L8 2.207l-5.5 5.5z" clip-rule="evenodd"/>-->
-                                <path fill-rule="evenodd" d="M13 2.5V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z" clip-rule="evenodd"/>-->
-                            </svg>
-                                               </span>
-                                                     <b>主页</b>
-                                                 </a>
-                                             </li>
-                                             </div>
-                                             <div th:each="team:${teamList}" class="menu">
-                                                 <li class="">
-                                                     <!--                    th:href="'/notebook/teamBoard?id='+${team.id}"-->
-                                                     <a aria-expanded="false" data-href="/notebook/user/teamBoard?teamId="  href="javascript:;">
-                                                <span>
-                                                    <svg class="bi bi-people" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8zm-7.995-.944v-.002.002zM7.022 13h7.956a.274.274 0 0 0 .014-.002l.008-.002c-.002-.264-.167-1.03-.76-1.72C13.688 10.629 12.718 10 11 10c-1.717 0-2.687.63-3.24 1.276-.593.69-.759 1.457-.76 1.72a1.05 1.05 0 0 0 .022.004zm7.973.056v-.002.002zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816zM4.92 10c-1.668.02-2.615.64-3.16 1.276C1.163 11.97 1 12.739 1 13h3c0-1.045.323-2.086.92-3zM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4z" clip-rule="evenodd"/>
-                                                    </svg>
-                                                </span>
-                                                         <b th:text="${team.title}"></b>
-                                                         <b id="teamId" th:text="${team.id}"></b>
-                                                     </a>
-                                                     <ul class="inside-menu">
-<!--                                                         <li><a href="#">-->
-<!--                                                             <svg class="bi bi-card-text" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">-->
-<!--                                                                 <path fill-rule="evenodd" d="M14.5 3h-13a.5.5 0 0 0-.5.5v9a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z" clip-rule="evenodd"/>-->
-<!--                                                                 <path fill-rule="evenodd" d="M3 5.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 8zm0 2.5a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5z" clip-rule="evenodd"/>-->
-<!--                                                             </svg>-->
-<!--                                                             所有团队看板-->
-<!--                                                         </a></li>-->
-                                                         <li><a href="#">
-                                                             <svg class="bi bi-people" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                                                 <path fill-rule="evenodd" d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8zm-7.995-.944v-.002.002zM7.022 13h7.956a.274.274 0 0 0 .014-.002l.008-.002c-.002-.264-.167-1.03-.76-1.72C13.688 10.629 12.718 10 11 10c-1.717 0-2.687.63-3.24 1.276-.593.69-.759 1.457-.76 1.72a1.05 1.05 0 0 0 .022.004zm7.973.056v-.002.002zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816zM4.92 10c-1.668.02-2.615.64-3.16 1.276C1.163 11.97 1 12.739 1 13h3c0-1.045.323-2.086.92-3zM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4z" clip-rule="evenodd"/>
-                                                             </svg>
-                                                             成员列表
-                                                         </a></li>
-                                                         <li><a href="#">
-                                                             <svg class="bi bi-gear" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                                                 <path fill-rule="evenodd" d="M8.837 1.626c-.246-.835-1.428-.835-1.674 0l-.094.319A1.873 1.873 0 0 1 4.377 3.06l-.292-.16c-.764-.415-1.6.42-1.184 1.185l.159.292a1.873 1.873 0 0 1-1.115 2.692l-.319.094c-.835.246-.835 1.428 0 1.674l.319.094a1.873 1.873 0 0 1 1.115 2.693l-.16.291c-.415.764.42 1.6 1.185 1.184l.292-.159a1.873 1.873 0 0 1 2.692 1.116l.094.318c.246.835 1.428.835 1.674 0l.094-.319a1.873 1.873 0 0 1 2.693-1.115l.291.16c.764.415 1.6-.42 1.184-1.185l-.159-.291a1.873 1.873 0 0 1 1.116-2.693l.318-.094c.835-.246.835-1.428 0-1.674l-.319-.094a1.873 1.873 0 0 1-1.115-2.692l.16-.292c.415-.764-.42-1.6-1.185-1.184l-.291.159A1.873 1.873 0 0 1 8.93 1.945l-.094-.319zm-2.633-.283c.527-1.79 3.065-1.79 3.592 0l.094.319a.873.873 0 0 0 1.255.52l.292-.16c1.64-.892 3.434.901 2.54 2.541l-.159.292a.873.873 0 0 0 .52 1.255l.319.094c1.79.527 1.79 3.065 0 3.592l-.319.094a.873.873 0 0 0-.52 1.255l.16.292c.893 1.64-.902 3.434-2.541 2.54l-.292-.159a.873.873 0 0 0-1.255.52l-.094.319c-.527 1.79-3.065 1.79-3.592 0l-.094-.319a.873.873 0 0 0-1.255-.52l-.292.16c-1.64.893-3.433-.902-2.54-2.541l.159-.292a.873.873 0 0 0-.52-1.255l-.319-.094c-1.79-.527-1.79-3.065 0-3.592l.319-.094a.873.873 0 0 0 .52-1.255l-.16-.292c-.892-1.64.902-3.433 2.541-2.54l.292.159a.873.873 0 0 0 1.255-.52l.094-.319z" clip-rule="evenodd"/>
-                                                                 <path fill-rule="evenodd" d="M8 5.754a2.246 2.246 0 1 0 0 4.492 2.246 2.246 0 0 0 0-4.492zM4.754 8a3.246 3.246 0 1 1 6.492 0 3.246 3.246 0 0 1-6.492 0z" clip-rule="evenodd"/>
-                                                             </svg>
-                                                             设置
-                                                         </a></li>
-                                                     </ul>
-                                                 </li>
-                                             </div>
-                                         </ul>
-                                     </nav>
+                                 <aside th:replace="fragments/layout2::teamBoardMenu">
+
                                  </aside>
                                  <!--    左侧菜单footer-->
-                            </aside>
                             </div>
                         </div>
                         <!--                    左侧新菜单footer-->
@@ -98,7 +46,73 @@
                         <!--                     右侧内容 header -->
                         <div class="col-md-9 col-sm-9 col-lg-9 workingRoom">
 
-                        </div>
+                            <div class="all-notebooks">
+                                <!--                                            最近查看header-->
+                                <div class="current">
+                                    <div class="current-header">
+                                                  <span class="current-icon">
+                                                      <svg class="bi bi-clock" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm8-7A8 8 0 1 1 0 8a8 8 0 0 1 16 0z" clip-rule="evenodd"/>
+  <path fill-rule="evenodd" d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5z" clip-rule="evenodd"/>
+                                                      </svg>
+                                                  </span>
+                                        <span class="current-text" style="color:rgb(61,61,61)"><b>最近查看</b></span>
+                                    </div>
+                                    <div class="container-fluid">
+                                        <div class="row">
+                                            <div class="current-main" th:each="boardDate:${boardDateList}">
+                                                <div class="col-md-12 col-sm-12 col-lg-12">
+                                                    <a th:href="'/notebook/deck?id='+${boardDate.id}">
+                                                        <div class="current-single-page" >
+                                                            <p class="current-sigle-page-title" th:text="${boardDate.title}">
+                                                            </p>
+                                                        </div>
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--                                            最近查看footer-->
+
+                                <!--                                个人看板 header          -->
+                                <div class="person-course">
+                                    <div class="person-course-header">
+                                                  <span class="person-course-icon">
+                                                     <svg class="bi bi-person" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M13 14s1 0 1-1-1-4-6-4-6 3-6 4 1 1 1 1h10zm-9.995-.944v-.002.002zM3.022 13h9.956a.274.274 0 0 0 .014-.002l.008-.002c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664a1.05 1.05 0 0 0 .022.004zm9.974.056v-.002.002zM8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" clip-rule="evenodd"/>
+</svg>
+                                                  </span>
+                                        <span class="person-course-text" style="color:rgb(61,61,61)"><b>个人看板</b></span>
+                                    </div>
+                                    <div class="container-fluid">
+                                        <div class="row">
+                                            <div class="person-course-main" th:each="board:${boardList}">
+                                                <div class="col-md-12 col-sm-12 col-lg-12">
+                                                    <a th:href="'/notebook/deck?id='+${board.id}">
+                                                        <div class="current-single-page" >
+                                                            <p class="current-sigle-page-title" th:text="${board.title}">
+                                                            </p>
+                                                        </div>
+                                                    </a>
+                                                </div>
+                                            </div>
+                                            <div class="person-course-main">
+                                                <div class="col-md-12 col-sm-12 col-lg-12">
+                                                    <div class="person-course-single-page" style="background-color:rgb(231,233,237);">
+                                                        <p>
+                                                            <a id="createNewBoard"  href="#" data-toggle="modal" data-target="#exampleModal">创建新面板</a>
+                                                        </p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!--                                个人学科 footer          -->
+                            </div>
+                            </div>
                     </div>
                 </div>
                 <!--内栅格 footer   -->
@@ -122,30 +136,30 @@
 
 </footer>
 
-<script>
-    $(function () {
+<!--<script>-->
+<!--    $(function () {-->
 
-        $.ajax({
-            type:"GET",
-            url:'/notebook/user/board',
-            success:function (data) {
-                $('.workingRoom').html(data);
-            }
-        });
-        // $('.workingRoom').html('/notebook/')
-        $('.menu>li').on('click',function () {
-            var href=$(this).find("a").attr('data-href');
-            $('.workingRoom').empty();
-            $.ajax({
-                type:"GET",
-                url:href+$('#teamId').text(),
-                success:function (data) {
-                    $('.workingRoom').html(data);
-                }
-            });
-        });
-    });
-</script>
+<!--        $.ajax({-->
+<!--            type:"GET",-->
+<!--            url:'/notebook/user/board',-->
+<!--            success:function (data) {-->
+<!--                $('.workingRoom').html(data);-->
+<!--            }-->
+<!--        });-->
+<!--        // $('.workingRoom').html('/notebook/')-->
+<!--        $('.menu>li').on('click',function () {-->
+<!--            var href=$(this).find("a").attr('data-href');-->
+<!--            $('.workingRoom').empty();-->
+<!--            $.ajax({-->
+<!--                type:"GET",-->
+<!--                url:href+$('#teamId').text(),-->
+<!--                success:function (data) {-->
+<!--                    $('.workingRoom').html(data);-->
+<!--                }-->
+<!--            });-->
+<!--        });-->
+<!--    });-->
+<!--</script>-->
 
 </body>
 </html>
