--- a/src/main/resources/templates/notebook/teamBoard.html
+++ b/src/main/resources/templates/notebook/teamBoard.html
@@ -5,81 +5,173 @@
 </head>
 
 <body>
+
+
+<!--//导航栏-->
+<header th:insert="fragments/layout2::header">
+
+</header>
+
+<!--主体内容-->
+<!--外栅格-->
+<main id="zhuTi">
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-auto col-sm-auto col-lg-auto" >
+                <!--            空白-->
+            </div>
+
+
+            <div class="col-md-11 col-sm-11 col-lg-11">
+                <!--            内栅格header  -->
+                <div class="container-fluid">
+                    <div class="row">
+                        <!--                    左侧新菜单header-->
+                        <div class="col-md-3">
+                            <div>
+
+                                <!--左侧菜单header    -->
+                                <aside th:replace="fragments/layout2::teamBoardMenu">
+
+                                </aside>
+                            </div>
+                        </div>
+                        <!--                    左侧新菜单footer-->
+
+
+
                         <!--                     右侧内容 header -->
-                                <!--                                            你的团队看板header-->
-                        <div class="col-md-9 col-sm-9 col-lg-9 ">
-                                <div class="personalTeamBoard">
-                                    <div class="personalTeamBoard-header">
+                        <div class="col-md-9 col-sm-9 col-lg-9 workingRoom">
+                          <div class="notebooks">
+
+                              <!--                                        右侧内容 header -->
+                              <!--                                &lt;!&ndash;                                            你的团队看板header&ndash;&gt;-->
+                              <div class="col-md-9 col-sm-9 col-lg-9 ">
+                                  <div class="personalTeamBoard">
+                                      <div class="personalTeamBoard-header">
                                                   <span class="personalTeamBoard-icon">
                                                       <svg class="bi bi-person" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
   <path fill-rule="evenodd" d="M13 14s1 0 1-1-1-4-6-4-6 3-6 4 1 1 1 1h10zm-9.995-.944v-.002.002zM3.022 13h9.956a.274.274 0 0 0 .014-.002l.008-.002c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664a1.05 1.05 0 0 0 .022.004zm9.974.056v-.002.002zM8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" clip-rule="evenodd"/>
                                                       </svg>
                                                   </span>
-                                        <span class="personalTeamBoard-text" style="color:rgb(61,61,61)"><b>你的团队看板</b></span>
-                                    </div>
-                                    <div class="container-fluid">
-                                        <div class="row">
-                                            <div class="current-main" th:each="personalTeamBoard:${personalTeamBoardList}">
-                                                <div class="col-md-12 col-sm-12 col-lg-12">
-                                                    <a th:href="'/notebook/deck?id='+${personalTeamBoard.id}">
-                                                        <div class="current-single-page" >
-                                                            <p class="current-sigle-page-title" th:text="${personalTeamBoard.title}">
-                                                            </p>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!--                                            最近查看footer-->
+                                          <span class="personalTeamBoard-text" style="color:rgb(61,61,61)"><b>你的团队看板</b></span>
+                                      </div>
+                                      <div class="container-fluid">
+                                          <div class="row">
+                                              <div class="current-main" th:each="personalTeamBoard:${personalTeamBoardList}">
+                                                  <div class="col-md-12 col-sm-12 col-lg-12">
+                                                      <a th:href="'/notebook/deck?id='+${personalTeamBoard.id}">
+                                                          <div class="current-single-page" >
+                                                              <p class="current-sigle-page-title" th:text="${personalTeamBoard.title}">
+                                                              </p>
+                                                          </div>
+                                                      </a>
+                                                  </div>
+                                              </div>
 
-                                <!--                                所有团队看板 header          -->
-                                <div class="allTeamBoard">
-                                    <div class="allTeamBoard-header">
+                                              <div class="person-course-main">
+                                                  <div class="col-md-12 col-sm-12 col-lg-12">
+                                                      <div class="person-course-single-page" style="background-color:rgb(231,233,237);">
+                                                          <p>
+                                                              <a id="createNewBoard"  href="#" data-toggle="modal" data-target="#exampleModal">创建新面板</a>
+                                                          </p>
+                                                      </div>
+                                                  </div>
+                                              </div>
+
+                                          </div>
+                                      </div>
+                                  </div>
+                                  <!--                                            最近查看footer-->
+
+                                  <!--                                所有团队看板 header          -->
+                                  <div class="allTeamBoard">
+                                      <div class="allTeamBoard-header">
                                                   <span class="allTeamBoard-icon">
                                                        <svg class="bi bi-people" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8zm-7.995-.944v-.002.002zM7.022 13h7.956a.274.274 0 0 0 .014-.002l.008-.002c-.002-.264-.167-1.03-.76-1.72C13.688 10.629 12.718 10 11 10c-1.717 0-2.687.63-3.24 1.276-.593.69-.759 1.457-.76 1.72a1.05 1.05 0 0 0 .022.004zm7.973.056v-.002.002zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816zM4.92 10c-1.668.02-2.615.64-3.16 1.276C1.163 11.97 1 12.739 1 13h3c0-1.045.323-2.086.92-3zM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4z" clip-rule="evenodd"/>
                                                       </svg>
                                                   </span>
-                                        <span class="allTeamBoard-text" style="color:rgb(61,61,61)">
+                                          <span class="allTeamBoard-text" style="color:rgb(61,61,61)">
                                      <b>所有团队看板 </b>
                                         </span>
-                                    </div>
-                                    <div class="container-fluid">
-                                        <div class="row">
-                                            <div class="person-course-main" th:each="teamBoard:${teamBoardList}">
-                                                <div class="col-md-12 col-sm-12 col-lg-12">
-                                                    <a th:href="'/notebook/deck?id='+${teamBoard.id}">
-                                                        <div class="current-single-page" >
-                                                            <p class="current-sigle-page-title" th:text="${teamBoard.title}">
-                                                            </p>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                            </div>
-                                            <div class="person-course-main">
-                                                <div class="col-md-12 col-sm-12 col-lg-12">
-                                                    <div class="person-course-single-page" style="background-color:rgb(231,233,237);">
-                                                        <p>
-                                                            <a id="createNewBoard"  href="#" data-toggle="modal" data-target="#exampleModal">创建新面板</a>
-                                                        </p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                                      </div>
+                                      <div class="container-fluid">
+                                          <div class="row">
+                                              <div class="person-course-main" th:each="teamBoard:${teamBoardList}">
+                                                  <div class="col-md-12 col-sm-12 col-lg-12">
+                                                      <a th:href="'/notebook/deck?id='+${teamBoard.id}">
+                                                          <div class="current-single-page" >
+                                                              <p class="current-sigle-page-title" th:text="${teamBoard.title}">
+                                                              </p>
+                                                          </div>
+                                                      </a>
+                                                  </div>
+                                              </div>
 
-                                <!--                                所有团队看板 footer          -->
+                                          </div>
+                                      </div>
+                                  </div>
+
+                                  <!--                                所有团队看板 footer          -->
+                              </div>
+                              <!--            右侧内容footer  &ndash;&gt;-->
+
+
+                          </div>
+
                         </div>
-                        <!--                     右侧内容footer  -->
+                    </div>
+                </div>
+                <!--内栅格 footer   -->
+            </div>
 
 
-<script>
+            <div class="col-1">
+                <!--            空白-->
+            </div>
+        </div>
+    </div>
+</main>
+<!--主体内容footer-->
 
-</script>
 
+
+
+
+<!--底部-->
+<footer th:replace="fragments/layout2::footer">
+
+</footer>
+
+<!--<script>-->
+<!--    $(function () {-->
+
+<!--        $.ajax({-->
+<!--            type:"GET",-->
+<!--            url:'/notebook/user/board',-->
+<!--            success:function (data) {-->
+<!--                $('.workingRoom').html(data);-->
+<!--            }-->
+<!--        });-->
+<!--        // $('.workingRoom').html('/notebook/')-->
+<!--        $('.menu>li').on('click',function () {-->
+<!--            var href=$(this).find("a").attr('data-href');-->
+<!--            $('.workingRoom').empty();-->
+<!--            $.ajax({-->
+<!--                type:"GET",-->
+<!--                url:href+$('#teamId').text(),-->
+<!--                success:function (data) {-->
+<!--                    $('.workingRoom').html(data);-->
+<!--                }-->
+<!--            });-->
+<!--        });-->
+<!--    });-->
+<!--</script>-->
 
 </body>
 </html>
+
+
+
